--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,19 @@
 eclipse.preferences.version=1
-encoding//basic/vars.py=UTF-8
+encoding//basic/MyExcel.py=utf-8
+encoding//basic/demo.py=utf-8
+encoding//basic/demo2.py=utf-8
+encoding//basic/demo3.py=utf-8
+encoding//basic/demo4.py=utf-8
+encoding//basic/demo5.py=utf-8
+encoding//demo/demo2.py=utf-8
+encoding//demo2/demo2.py=utf-8
+encoding//demo2/demo3.py=utf-8
+encoding//demo2/demo4.py=utf-8
+encoding//demo2/demo8.py=utf-8
+encoding//demo2/demo9.py=utf-8
+encoding//myexcel/demo2.py=utf-8
+encoding//myexcel/demo3.py=utf-8
+encoding//myexcel/demo4.py=utf-8
+encoding/<project>=UTF-8
+encoding/excel2mysql.py=utf-8
+encoding/mysql2excel.py=utf-8
